--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.1.0",
     "@sanity/client": "^3.2.0",
     "@walletconnect/web3-provider": "^1.7.4",
     "@web3auth/web3auth": "^0.4.0",
